<resources>
    <string name="app_name">AtoZ</string>

    <!--activity_main.xml-->
    <string name="hint_editSearch">Search</string>

    <!--PermissionsActivity-->
    <string name="permission_request">권한을 허가하지 않으면 앱 사용이 불가능 합니다.</string>
    <string name="permission_requet_warning">권한 경고</string>
    <string name="permission_request_second">권한 허가</string>
    <string name="permission_request_deny">권한 거절</string>

    <!--test-->
    <string name="no_heart">1.2K</string>
    <string name="no_comment">2,300</string>

    <!--upload_button-->
    <string name="btnUpload_dataType_video">영상</string>
    <string name="btnUpload_dataType_audio">음성</string>
    <string name="btnUpload_upload">업로드</string>

    <!--upload state-->
    <string name="txt_uploadState_processing">처리중...</string>
    <string name="txt_uploadState_complete">처리 완료</string>

    <string name="txt_upload_title_hint">제목</string>
    <string name="txt_upload_content_hint">설명...</string>

    <!--게시글 flag-->
    <string name="switch_comment">댓글 허용</string>
    <string name="switch_userName">익명 글쓰기</string>
    <string name="switch_directMessage">Direct Message 허용</string>
    <string name="switch_download">무료 다운로드 허용</string>

    <!--fragment upload 실제 media upload 부분-->
    <string name="txt_upload_media">파일 불러오기</string>

    <!--UploadFragment-->
    <string name="warning_dont_select_media">Please Select an Media File</string>
    <string name="success_request_upload_media">Media Upload Success</string>
    <string name="fail_request_upload_media">Media Upload Fail</string>
    <string name="cancel_select_video_file">Select Video File is Cancelled</string>
    <string name="fail_select_video_file">Fail to Select Video File. Please Try again!</string>

    <!--userFragment-->
    <string name="test_user_list_media_name">스누피 드로잉</string>
    <string name="test_user_name">닉네임입니다.</string>
    <string name="test_user_detail">자기 소개하는 자리입니다...</string>
</resources>
