<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="@dimen/user_list_min_height"
    android:layout_margin="@dimen/user_list_item_margin">

    <ImageView
        android:id="@+id/user_thumbnail"
        android:layout_width="0sp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="@color/user_list_image_background"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:layout_width="0sp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="@dimen/user_list_item_margin">

        <TextView
            android:id="@+id/user_list_media_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_user_list_media_name"
            android:textColor="@color/test_user_list_media_name"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/user_list_image_size"
                android:adjustViewBounds="true"
                android:src="@drawable/heart"/>

            <TextView
                android:id="@+id/user_list_likeNo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/margin_mainImage"
                android:text="@string/no_heart"
                android:textSize="@dimen/txtSize_mainImage"
                android:textStyle="bold"
                android:textColor="@color/txt_mainImage"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/user_list_image_size"
                android:adjustViewBounds="true"
                android:src="@drawable/comment"/>

            <TextView
                android:id="@+id/user_list_commentNo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/no_comment"
                android:textSize="@dimen/txtSize_mainImage"
                android:textStyle="bold"
                android:textColor="@color/txt_mainImage"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/user_list_flag_size"
                android:adjustViewBounds="true"
                android:src="@drawable/list"
                android:layout_marginEnd="@dimen/user_list_flag_marginRight"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/user_list_flag_size"
                android:adjustViewBounds="true"
                android:src="@drawable/message"
                android:layout_marginEnd="@dimen/user_list_flag_marginRight"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/user_list_flag_size"
                android:adjustViewBounds="true"
                android:src="@drawable/download"
                android:layout_marginEnd="@dimen/user_list_flag_marginRight"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/user_list_flag_size"
                android:adjustViewBounds="true"
                android:src="@drawable/change"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>