<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_media_dialog"
    android:padding="@dimen/dialog_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/fragment_dialog_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_mainImage"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/heart" />

                <TextView
                    android:id="@+id/detailed_audio_likeNo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingRight="@dimen/margin_mainImage"
                    android:text="@string/no_heart"
                    android:textColor="@color/txt_mainImage"
                    android:textSize="@dimen/txtSize_mainImage"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/comment" />

                <TextView
                    android:id="@+id/detailed_audio_commentNo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/no_comment"
                    android:textColor="@color/txt_mainImage"
                    android:textSize="@dimen/txtSize_mainImage"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detailed_audio_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:textColor="@color/txt_mainImage"
                    android:textSize="@dimen/txtSize_mainImage"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/user_list_item_margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/detailed_audio_userProfile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/user_list_item_margin"
                    android:layout_weight="2"
                    android:adjustViewBounds="true"
                    android:src="@drawable/profile" />

                <!--de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width = "0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:src="@drawable/profile" /-->

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detailed_audio_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/test_user_list_media_name"
                        android:textSize="@dimen/detailed_txt_size"/>

                    <TextView
                        android:id="@+id/detailed_audio_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/test_user_name"
                        android:textColor="@color/test_user_list_media_name"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detailed_audio_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/test_user_detail"
                        android:textColor="@color/test_user_list_media_name" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/detailed_button_height"
                android:background="@drawable/drawable_detailed_media_button"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/detailed_button_marginRight">

                <ImageView
                    android:id="@+id/detailed_audio_btn_like"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/heart"
                    android:layout_marginRight="@dimen/detailed_button_marginRight"/>

                <ImageView
                    android:id="@+id/detailed_audio_btn_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/list"
                    android:layout_marginRight="@dimen/detailed_button_marginRight"/>

                <ImageView
                    android:id="@+id/detailed_audio_btn_album"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/heart_book_2"
                    android:layout_marginRight="@dimen/detailed_button_marginRight"/>

                <ImageView
                    android:id="@+id/detailed_audio_btn_message"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/message"
                    android:layout_marginRight="@dimen/detailed_button_marginRight"/>

                <ImageView
                    android:id="@+id/detailed_audio_btn_download"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/download"
                    android:layout_marginRight="@dimen/detailed_button_marginRight"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:orientation="vertical"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>